[package]
name = "rust-weather"
version = "0.1.0"
authors = ["niall.barber <niall.barber@actual-experience.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
exitfailure = "0.5.1"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
tokio = { version = "0.2", features = ["full"] }